// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaceTypeCategoryInput.vue should not trigger input event if new value is set programmatically 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select v-autocomplete"
  eager="true"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-69"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <input
          id="input-69"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto v-autocomplete__content"
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-69"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-69"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="barber-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="barber-list-item-73"
                  >
                    Barber
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="car-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="car-list-item-73"
                  >
                    Car
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="clothing-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="clothing-list-item-73"
                  >
                    Clothing
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="education-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="education-list-item-73"
                  >
                    Education
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="entertainment-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="entertainment-list-item-73"
                  >
                    Entertainment
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="food-list-item-73"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="food-list-item-73"
                  >
                    Food
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="health-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="health-list-item-73"
                  >
                    Health
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="household-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="household-list-item-73"
                  >
                    Household
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="pet-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="pet-list-item-73"
                  >
                    Pet
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="relocation-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="relocation-list-item-73"
                  >
                    Relocation
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="tech-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="tech-list-item-73"
                  >
                    Tech
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="transport-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="transport-list-item-73"
                  >
                    Transport
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="travel-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="travel-list-item-73"
                  >
                    Travel
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlaceTypeCategoryInput.vue should not trigger input event if new value is set programmatically 2`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select v-autocomplete"
  eager="true"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-69"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <input
          id="input-69"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto v-autocomplete__content"
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-69"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-69"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="barber-list-item-73"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="barber-list-item-73"
                  >
                    Barber
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="car-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="car-list-item-73"
                  >
                    Car
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="clothing-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="clothing-list-item-73"
                  >
                    Clothing
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="education-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="education-list-item-73"
                  >
                    Education
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="entertainment-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="entertainment-list-item-73"
                  >
                    Entertainment
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="food-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="food-list-item-73"
                  >
                    Food
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="health-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="health-list-item-73"
                  >
                    Health
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="household-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="household-list-item-73"
                  >
                    Household
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="pet-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="pet-list-item-73"
                  >
                    Pet
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="relocation-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="relocation-list-item-73"
                  >
                    Relocation
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="tech-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="tech-list-item-73"
                  >
                    Tech
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="transport-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="transport-list-item-73"
                  >
                    Transport
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="travel-list-item-73"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="travel-list-item-73"
                  >
                    Travel
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlaceTypeCategoryInput.vue should render correctly 1`] = `
<div
  class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line v-select v-autocomplete"
  eager="true"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-3"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          for="input-3"
          style="left: 0px; position: absolute;"
        >
          Place Type Category
        </label>
        <input
          id="input-3"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto v-autocomplete__content"
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-3"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-3"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="barber-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="barber-list-item-7"
                  >
                    Barber
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="car-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="car-list-item-7"
                  >
                    Car
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="clothing-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="clothing-list-item-7"
                  >
                    Clothing
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="education-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="education-list-item-7"
                  >
                    Education
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="entertainment-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="entertainment-list-item-7"
                  >
                    Entertainment
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="food-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="food-list-item-7"
                  >
                    Food
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="health-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="health-list-item-7"
                  >
                    Health
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="household-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="household-list-item-7"
                  >
                    Household
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="pet-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="pet-list-item-7"
                  >
                    Pet
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="relocation-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="relocation-list-item-7"
                  >
                    Relocation
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="tech-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="tech-list-item-7"
                  >
                    Tech
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="transport-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="transport-list-item-7"
                  >
                    Transport
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="travel-list-item-7"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="travel-list-item-7"
                  >
                    Travel
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlaceTypeCategoryInput.vue should render correctly with value 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-select v-autocomplete"
  eager="true"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-25"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <input
          id="input-25"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto v-autocomplete__content"
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 0; display: none;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-25"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-25"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="barber-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="barber-list-item-29"
                  >
                    Barber
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="car-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="car-list-item-29"
                  >
                    Car
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="clothing-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="clothing-list-item-29"
                  >
                    Clothing
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="education-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="education-list-item-29"
                  >
                    Education
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="entertainment-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="entertainment-list-item-29"
                  >
                    Entertainment
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="food-list-item-29"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="food-list-item-29"
                  >
                    Food
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="health-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="health-list-item-29"
                  >
                    Health
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="household-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="household-list-item-29"
                  >
                    Household
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="pet-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="pet-list-item-29"
                  >
                    Pet
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="relocation-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="relocation-list-item-29"
                  >
                    Relocation
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="tech-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="tech-list-item-29"
                  >
                    Tech
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="transport-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="transport-list-item-29"
                  >
                    Transport
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="travel-list-item-29"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="travel-list-item-29"
                  >
                    Travel
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PlaceTypeCategoryInput.vue should update v-model correctly 1`] = `
<div
  class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field v-text-field--single-line v-text-field--is-booted v-select v-autocomplete primary--text"
  eager=""
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="list-92"
      class="v-input__slot"
      role="combobox"
    >
      <div
        class="v-select__slot"
      >
        <input
          id="input-92"
          type="text"
        />
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light primary--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      >
        <div
          class="v-menu__content theme--light v-menu__content--auto v-autocomplete__content"
          style="max-height: 200px; min-width: 0px; max-width: auto; top: 12px; left: 12px; transform-origin: top left; z-index: 8; display: none; z-index: 8;"
        >
          <div
            class="v-select-list v-card theme--light"
            id="list-92"
          >
            <div
              class="v-list v-sheet v-sheet--tile theme--light"
              id="list-92"
              role="listbox"
              tabindex="-1"
            >
              <div
                aria-labelledby="barber-list-item-96"
                aria-selected="true"
                class="v-list-item primary--text v-list-item--active v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="barber-list-item-96"
                  >
                    Barber
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="car-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="car-list-item-96"
                  >
                    Car
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="clothing-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="clothing-list-item-96"
                  >
                    Clothing
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="education-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="education-list-item-96"
                  >
                    Education
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="entertainment-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="entertainment-list-item-96"
                  >
                    Entertainment
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="food-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="food-list-item-96"
                  >
                    Food
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="health-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="health-list-item-96"
                  >
                    Health
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="household-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="household-list-item-96"
                  >
                    Household
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="pet-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="pet-list-item-96"
                  >
                    Pet
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="relocation-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="relocation-list-item-96"
                  >
                    Relocation
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="tech-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="tech-list-item-96"
                  >
                    Tech
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="transport-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="transport-list-item-96"
                  >
                    Transport
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="travel-list-item-96"
                aria-selected="false"
                class="v-list-item v-list-item--link theme--light"
                role="option"
                tabindex="0"
              >
                <div
                  class="v-list-item__content"
                >
                  <div
                    class="v-list-item__title"
                    id="travel-list-item-96"
                  >
                    Travel
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
